# remind

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AGENT_README.md  CHANGELOG.md  Dockerfile  README.md  RELEASE_NOTES.md  TODO.md  discussion.md  docker-compose.yml  memory.db  pyproject.toml
.claude/: hooks.json
.claude/commands/: update-changelog-and-tag.md
.claude/skills/oo-learn-patterns/: SKILL.md
.claude/skills/remind/: SKILL.md
.claude/skills/remind-capture/: SKILL.md
.claude/skills/remind-context/: SKILL.md
.claude/skills/remind-curate/: SKILL.md
.claude/skills/remind-implement/: SKILL.md
.claude/skills/remind-plan/: SKILL.md
.claude/skills/remind-spec/: SKILL.md
.cursor/commands/: update-changelog-and-tag.md
.github/workflows/: docs.yml
.oo/patterns/: docker-build.toml  docker-compose.toml  npm-build.toml  pytest.toml  svelte-check.toml  uv-run-pytest.toml  uv-run.toml  vite-build.toml
.opencode/commands/: implement.md  plan.md
.remind/: remind.db
docs/: AGENTS.md  memory-decay-review.md  opus-memory-decay-review.md  plan-memory-decay.md
docs/plans/001-memory-decay/: plan.md  task-001-add-concept-access-tracking.md  task-001-add-decay-fields.md  task-002-add-decay-config-options.md  task-002-add-decay-config.md  task-003-add-access-event-tracking-to-store.md  task-003-update-serialization.md  task-004-add-recall-counter-to-store.md  task-004-modify-retrieval.md  task-005-implement-decay-algorithm.md  task-005-implement-memory-decayer-class.md  task-006-add-decay-method-to-interface.md  task-006-add-rejuvenation.md  task-007-hook-periodic-decay.md  task-007-update-retriever-to-record-access-events.md  task-008-add-cli-decay-command.md  task-008-add-decay-stats.md  task-009-test-decay-behavior.md  task-009-test-decay-config-loading.md  task-010-test-concept-access-tracking.md  task-011-test-decay-execution.md  task-012-test-batch-trigger.md  task-013-test-decay-disabled-mode.md  task_status.md
docs/plans/002-memory-decay-fixes/: plan.md  task-001-add-metadata-table.md  task-002-implement-recall-persistence.md  task-004-fix-create-memory-config.md  (+10 more)
docs/screenshots-0.2.0/: README.md
docs/tasks/: 1-1-update-concept-model.md  1-2-add-retrieval-access-log.md  1-3-add-decay-configuration.md  2-1-implement-decay-score-computation.md  2-2-integrate-access-tracking.md  3-1-update-retrieval-ranking.md  3-2-update-interface-layer.md  4-1-add-cli-commands.md  4-2-add-rest-api-endpoints.md  4-3-add-mcp-tools.md  5-1-unit-tests.md  5-2-integration-tests.md
examples/postgres-docker/: .env.example  README.md  docker-compose.yml  remind.config.json.example
examples/sqlite/: README.md  remind.config.json.example
src/realmem/: __init__.py  cli.py  consolidation.py  extraction.py  interface.py  mcp_server.py  models.py  retrieval.py  store.py
src/remind/: __init__.py  apply.py  background.py  background_worker.py  cli.py  config.py  consolidation.py  decay.py  extraction.py  facts.py  interface.py  llm_protocol.py  mcp_server.py  models.py  reranker.py  retrieval.py  snapshot.py  store.py  triage.py
tests/: __init__.py  conftest.py  test_apply.py  test_background.py  test_cli.py  test_config.py  test_consolidation.py  test_decay.py  test_decay_config.py  test_decay_integration.py  test_extraction.py  test_facts.py  test_hybrid_recall.py  test_integration.py  test_interface.py  test_interface_decay.py  test_llm_protocol.py  test_mcp_tools.py  test_models.py  test_recall_contradictions.py  test_retrieval.py  test_snapshot.py  test_store.py  test_tasks.py  test_triage.py
web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.svelte  app.css
website/: index.md  package-lock.json  package.json
website/.vitepress/: config.ts
website/concepts/: auto-ingest.md  concepts.md  consolidation.md  entities.md  episodes.md  facts-and-conflicts.md  memory-decay.md  relations.md  retrieval.md  tasks.md
website/examples/: index.md  project-memory.md  research-ingestion.md  sparring-partner.md  sqlite.md
website/guide/: configuration.md  getting-started.md  mcp.md  python-api.md  skills.md  web-ui.md  what-is-remind.md
website/reference/: changelog.md  cli-commands.md  mcp-tools.md  providers.md  rest-api.md
(+66 files in other folders)
