[project]
name = "remind-mcp"
version = "0.2.0"
description = "Generalization-capable memory layer for LLMs with episodic buffers, semantic graphs, and spreading activation retrieval"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.52.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "fastmcp>=0.4.0",
    "uvicorn>=0.30.0",
    "starlette>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
remind = "remind.cli:main"
remind-mcp = "remind.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/remind"]

# Include built static files in the package
[tool.hatch.build.targets.wheel.force-include]
"src/remind/static" = "remind/static"

# For sdist, include web source for building
[tool.hatch.build.targets.sdist]
include = [
    "src/remind/**/*",
    "web/**/*",
    "tests/**/*",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = [
    "web/node_modules/**/*",
]

# Force include static files even though they're gitignored
[tool.hatch.build.targets.sdist.force-include]
"src/remind/static" = "src/remind/static"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--cov=src/remind",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]

[tool.coverage.run]
source = ["src/remind"]
branch = true
omit = [
    "src/remind/__init__.py",
    "src/remind/cli.py",
    "src/remind/mcp_server.py",
    "src/remind/api/*",
    "src/remind/providers/anthropic.py",
    "src/remind/providers/openai.py",
    "src/remind/providers/azure_openai.py",
    "src/remind/providers/ollama.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true

